GNOME Bugzilla – Bug 704255
qtdemux: invalid base time on newsegment in push mode after a seek
Last modified: 2013-07-16 08:48:13 UTC
Created attachment 249205 [details] [review] qtdemux: reset segment on flush stop cca2f555d14 introduces a regression, where the demux segment is not reset on flush stop, so the next upstream segment event will calculate an invalid base time on the new segment to be sent downstream. This can be reproduced easily by seeking in an mp4 file in push mode, after the seek it takes some time for playback to start again; this is because the segment base time is not 0, where it should be.
commit 54bba4f60cfb6263c85f79167f0f5d7fa39fd548 Author: Arnaud Vrac <avrac@freebox.fr> Date: Mon Jul 15 16:24:07 2013 +0200 qtdemux: reset segment on flush stop cca2f555d14 introduces a regression, where the demux segment is not reset on flush stop, so the next upstream segment event will calculate an invalid base time on the new segment to be sent downstream. https://bugzilla.gnome.org/show_bug.cgi?id=704255